Import changes from the upstream

--- a/mlp/templates/explore/base.html
+++ b/mlp/templates/explore/base.html
@@ -23,7 +23,7 @@
 
 
 
-    <title>ML Pipelines Catalog</title>
+    <title>Machine Learning Pipelines Catalog</title>
 
     <style type="text/css">
 
@@ -88,6 +88,24 @@ margin-right: 10px;
             <a class="nav-link disabled text-muted" href="#">
               <span data-feather="users"></span>
               Pipelines <span class="badge badge-pill badge-secondary align-middle">{{ PIPELINE_COUNT }}</span>
+            </a>
+          </li>
+                  <li class="nav-item">
+            <a class="nav-link disabled text-muted" href="#">
+              <span data-feather="users"></span>
+              Models <span class="badge badge-pill badge-secondary align-middle">{{ MODEL_COUNT }}</span>
+            </a>
+          </li>
+                  <li class="nav-item">
+            <a class="nav-link disabled text-muted" href="#">
+              <span data-feather="users"></span>
+              Dashboards <span class="badge badge-pill badge-secondary align-middle">{{ DASHBOARD_COUNT }}</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled text-muted" href="#">
+              <span data-feather="users"></span>
+              Experts <span class="badge badge-pill badge-secondary align-middle">{{ EXPERT_COUNT }}</span>
             </a>
           </li>
             {% comment %}
