--- a/mlp/templates/explore/base.html
+++ b/mlp/templates/explore/base.html
@@ -172,7 +172,7 @@ margin-right: 10px;
     <footer>
         <span class="float-right text-muted">
             <a href="https://github.com/bitgn/ml-pipelines">ML Pipelines</a>
-            {% if APP_VERSION %} / version {{ APP_VERSION }}{% endif %}
+            {% if APP_VERSION %}: {{ APP_VERSION }}{% endif %}
         </span>
     </footer>
     </main>
