Refactor to align with the simplified pipeline model

--- a/mlp/templates/explore/base.html
+++ b/mlp/templates/explore/base.html
@@ -87,7 +87,7 @@ margin-right: 10px;
           <li class="nav-item">
             <a class="nav-link disabled text-muted" href="#">
               <span data-feather="users"></span>
-              Pipelines <span class="badge badge-pill badge-secondary align-middle">{{ PIPELINE_COUNT }}</span>
+              Jobs <span class="badge badge-pill badge-secondary align-middle">{{ JOB_COUNT }}</span>
             </a>
           </li>
                   <li class="nav-item">
@@ -99,7 +99,7 @@ margin-right: 10px;
                   <li class="nav-item">
             <a class="nav-link disabled text-muted" href="#">
               <span data-feather="users"></span>
-              Dashboards <span class="badge badge-pill badge-secondary align-middle">{{ DASHBOARD_COUNT }}</span>
+              Reports <span class="badge badge-pill badge-secondary align-middle">{{ REPORT_COUNT }}</span>
             </a>
           </li>
           <li class="nav-item">
