--- a/mlp/templates/explore/base.html
+++ b/mlp/templates/explore/base.html
@@ -49,7 +49,7 @@ margin-right: 10px;
   <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">ML Pipelines Catalog</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">ML Catalog</a>
 
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
@@ -59,7 +59,7 @@ margin-right: 10px;
 
 <div class="container-fluid" id="app">
   <div class="row">
-    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <nav class="col-sm-3 col-md-2 d-none d-md-block bg-light sidebar">
       <div class="sidebar-sticky">
 
 
