--- a/mlp/templates/explore/view-dataset.html
+++ b/mlp/templates/explore/view-dataset.html
@@ -67,7 +67,10 @@
         <div class="row pt-5">
         <div class="col">
             <h3>Description</h3>
-            {{ description|safe }}
+
+            <article class="pt-2">
+                {{ description|safe }}
+            </article>
 
         </div>
         </div>
