--- a/mlp/templates/explore/projects.html
+++ b/mlp/templates/explore/projects.html
@@ -29,7 +29,7 @@
             <td class="dataset-count">{{ p.dataset_count }}</td>
             <td class="job-count">{{ p.job_count }}</td>
 
-            <td>{{ p.raw_bytes|filesizeformat }}</td>
+            <td>{{ p.zip_bytes|filesizeformat }}</td>
         </tr>
     {%  empty %}
 
