--- a/mlp/templates/explore/explore-datasets.html
+++ b/mlp/templates/explore/explore-datasets.html
@@ -55,6 +55,7 @@
         <tr class="dataset-info" id="ds-{{ ds.dataset_id }}">
             <td>
                 <a href="{% url "explore:view_dataset" ds.dataset_id%} " class="dataset-name">{{ ds.name  }}</a>
+            {% if ds.storage_id_set %}<span class="text-muted"> ({{ ds.storage_id }})</span>{% endif %}
                 {% if meta.stale %} <span class="stale-status badge badge-warning">stale</span>{% endif %}
 
             </td>
