--- a/mlp/templates/explore/projects.html
+++ b/mlp/templates/explore/projects.html
@@ -16,7 +16,7 @@
             <th>Name</th>
             <th>Datasets</th>
             <th>Jobs</th>
-            <th>Size</th>
+            <th>Storage</th>
         </tr>
     </thead>
     <tbody>
