--- a/mlp/templates/explore/project.html
+++ b/mlp/templates/explore/project.html
@@ -1,48 +1,62 @@
 {% extends "explore/base.html" %}
-
+{% load filters %}
 
 {% block content %}
 
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb  rounded-bottom" style="border-top-left-radius: 0; border-top-right-radius: 0;">
-        <li class="breadcrumb-item"><a href="{% url "explore:projects" %}">Projects</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{ name }}</li>
-      </ol>
-    </nav>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb  rounded-bottom" style="border-top-left-radius: 0; border-top-right-radius: 0;">
+    <li class="breadcrumb-item"><a href="{% url "explore:projects" %}">Projects</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ name }}</li>
+  </ol>
+</nav>
 
 
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-        <h1 class="h2">Project: {{ name }}</h1>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
+    <h1 class="h2">Project: {{ name }}</h1>
 
-    </div>
-
-
+</div>
 
 
 
-    <table class="table table-sm table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Dataset</th>
-            <th>Size</th>
-        </tr>
-    </thead>
-    <tbody>
 
-    {% for ds, info in datasets %}
-        <tr class="dataset-info" id="ds-{{ ds.dataset_id }}">
-            <td>
-                <a href="{% url "explore:view_dataset" ds.dataset_id %}" class="dataset-link">{{ds.name}}</a>
-                {% if ds.storage_id_set %}<span class="text-muted"> ({{ ds.storage_id }})</span>{% endif %}
-                {% if info.stale %} <span class="stale-status badge badge-warning">stale</span>{% endif %}
-            </td>
-            <td class="zip-size">{% if ds.zip_bytes_set %}{{ ds.zip_bytes | filesizeformat }}{% endif %}</td>
-        </tr>
 
-    {% endfor %}
+<table class="table table-sm table-striped table-bordered">
+<thead>
+    <tr>
+        <th>Dataset</th>
+        <th>Format</th>
+        <th>Storage</th>
+        <th>Updated</th>
+    </tr>
+</thead>
+<tbody>
 
-    </tbody>
-    </table>
+{% for ds, info in datasets %}
+
+
+    <tr class="dataset-info" id="ds-{{ ds.dataset_id }}">
+    <td>
+        <a href="{% url "explore:view_dataset" ds.dataset_id %}" class="dataset-link">{{ds.name}}</a>
+
+
+        {% if info.stale %} <span class="stale-status badge badge-warning">stale</span>{% endif %}
+
+    </td>
+    <td class="data-format text-lowercase">{% if ds.data_format_set %}{{ ds.data_format }}{% endif %}</td>
+    <td class="zip-size">
+
+        {% if ds.zip_bytes_set %}{{ ds.zip_bytes | filesizeformat }}{% endif %}
+    {% if ds.storage_id_set %}<span class="text-muted">at {{ ds.storage_id }}</span>{% endif %}
+    </td>
+    <td class="update-timestamp">{% if ds.update_timestamp_set %}{{ ds.update_timestamp |fmt_timestamp }}{% endif %}</td>
+
+
+    </tr>
+
+{% endfor %}
+
+</tbody>
+</table>
 
 
 
