--- a/mlp/templates/explore/view-dataset.html
+++ b/mlp/templates/explore/view-dataset.html
@@ -19,13 +19,13 @@
         </h2>
     </div>
 
-    <div class="container">
+    <div class="container" id="ds-{{ dataset.dataset_id }}">
         <div class="row rounded border px-4 py-3" >
             <div class="col">
 
                 <div>
                     {% if dataset.storage_id_set %}
-                        <strong>Storage: </strong>{{ dataset.storage_id }}<br/>
+                        <strong>Storage: </strong><span class="storage-id">{{ dataset.storage_id }}</span><br/>
                     {% endif %}
 
                     {% if dataset.storage_location_set %}
