MLP-42: rename storage to location

--- a/mlp/templates/explore/explore-datasets.html
+++ b/mlp/templates/explore/explore-datasets.html
@@ -62,7 +62,7 @@
             <td><a href="{% url "explore:view_project" ds.project_id %}" class="project-link">{{ meta.project_name }}</a> </td>
             <td>
                 <span class="zip-size">{{ ds.zip_bytes|fmt_bytes }}</span>
-                {% if ds.storage_id_set %}<span class="text-muted">at <span class="storage-id">{{ ds.storage_id }}</span></span>{% endif %}
+                {% if ds.location_id_set %}<span class="text-muted">at <span class="location-id">{{ ds.location_id }}</span></span>{% endif %}
             </td>
             <td class="update-timestamp">{% if ds.update_timestamp_set %}{{ ds.update_timestamp |fmt_timestamp }}{% endif %}</td>
         </tr>
